# brainmold

./: CMakeLists.txt  README.md  brainmold.cxx  pyproject.toml
misc/cxx/: CMakeLists.txt  IPOptProblemInterface.h  brainmold.cxx
python/: slab_postproc.py
src/picsl_brainmold/: __main__.py  brainmold.py  slab_postproc.py
